--- a/AMS/Views/TodoTasks/Index.cshtml
+++ b/AMS/Views/TodoTasks/Index.cshtml
@@ -111,6 +111,8 @@
             var $table = $("#table").bootstrapTable();
         });
     </script>
+
+    <script src="~/js/the-repeater.js"></script>
 }
 
 
