--- a/AMS/Views/Tickets/Details.cshtml
+++ b/AMS/Views/Tickets/Details.cshtml
@@ -52,16 +52,46 @@
                 </div>
                 <div class="card-body">
                     <div class="row mb-1">
+                        <div id="modal-placeholder"></div>
                         <div class="form-group col-md-12">
                             <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">
                                 Edit
                             </a>
-                            <a asp-controller="Assignments" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-success ml-1">
+                            <a asp-controller="Assignments" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-secondary ml-1">
                                 Assignments
                             </a>
-                            <a asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-success ml-1">
+                            <a asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-secondary ml-1">
                                 Tasks
                             </a>
+                            <button type="button" class="btn btn-primary ml-1" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("AddTask", new { ticketId = Model.Id })">
+                                Add Task
+                            </button>
+
+                            @if (Model.CanBeCompleted)
+                            {
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Completed" class="btn btn-sm btn-success ml-1">
+                                    <i class="fa fa-check"></i> Complete
+                                </a>
+                            }
+                            @if (Model.CanBeCancelled)
+                            {
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Cancelled" class="btn btn-sm btn-danger ml-1">
+                                    <i class="fa fa-close"></i> Cancel
+                                </a>
+                            }
+                            @if (Model.IsActive && !Model.IsPending)
+                            {
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Pending" class="btn btn-sm btn-warning ml-1">
+                                    <i class="fa fa-pause"></i> Pending
+                                </a>
+                            }
+
+                            @if (Model.IsPending)
+                            {
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Open" class="btn btn-sm btn-primary ml-1">
+                                    <i class="fa fa-play"></i> Re-Open
+                                </a>
+                            }
                         </div>
                     </div>
                     <div class="row">
@@ -173,5 +203,7 @@
         $(function () {
             $(".table").bootstrapTable();
         });
+        
     </script>
+    <script src="~/js/the-repeater.js"></script>
 }
