--- a/AMS/Views/Tickets/_AddTask.cshtml
+++ b/AMS/Views/Tickets/_AddTask.cshtml
@@ -1,21 +1,22 @@
-﻿@model AMS.Models.Ticket
-
+﻿@model TodoTask
 @{
-    ViewData["Title"] = "Ticket";
-    ViewData["Action"] = "Create";
+    ViewData["AddModalTitle"] = "Add Todo Task";
 }
 
-<div class="row">
-    <div class="offset-2 col-md-8">
-        <form asp-action="@ViewBag.Action" enctype="multipart/form-data" class="form-horizontal">
-            <div class="card">
-                <div class="card-header">
-                    <strong>@ViewBag.Title</strong>
-                    Form
-                </div>
-                <div class="card-body">
+<!-- Modal -->
+<div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="add-modal-label" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="add-modal-label">@ViewBag.AddModalTitle</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="AddTask">
+                    <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
                     <!-- TenantId Hidden -->
                     <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
 
@@ -33,50 +34,26 @@
 
 
                     <div class="row">
-                        <!-- TicketType Select -->
+                        <!-- TodoTaskType Select -->
                         <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="TicketTypeId" class="col-md-3 col-form-label"></label>
+                            <label asp-for="TodoTaskTypeId" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
-                                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId">
+                                <select asp-for="TodoTaskTypeId" class="form-control" asp-items="ViewBag.TodoTaskTypeId">
                                     <option disabled value="">--- SELECT ---</option>
                                 </select>
-                                <span class="help-block"><small><i class="fa fa-info-circle mx-1"></i>Selecting ticket type will define the properties of ticket</small></span>
-                                <span asp-validation-for="TicketTypeId" class="text-danger"></span>
+                                <span class="help-block"><small><i class="fa fa-info-circle mx-1"></i>Selecting task type will define the properties of ticket</small></span>
+                                <span asp-validation-for="TodoTaskTypeId" class="text-danger"></span>
                             </div>
                         </div>
 
-
-                    </div>
-
-                    <!-- Ticket Client and Location Select -->
-                    <div class="row">
-                        <!-- Ticket Client Select -->
+                        <!-- Ticket Hidden -->
                         <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="ClientId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <select asp-for="ClientId" class="form-control" asp-items="ViewBag.ClientId">
-                                    <option value="">--- SELECT ---</option>
-                                </select>
-                                <span class="help-block"><small><i class="fa fa-info-circle mx-1"></i>Client is the owner of the ticket</small></span>
-                                <span asp-validation-for="ClientId" class="text-danger"></span>
-                            </div>
-                        </div>
-
-                        <!-- Ticket Location Select -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="LocationId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <select asp-for="LocationId" class="form-control" asp-items="ViewBag.LocationId">
-                                    <option value="">--- SELECT ---</option>
-                                </select>
-                                <span class="help-block"><small><i class="fa fa-info-circle mx-1"></i>Select the location of the ticket</small></span>
-                                <span asp-validation-for="LocationId" class="text-danger"></span>
-                            </div>
+                            <input type="hidden" asp-for="TicketId" value="@ViewBag.TicketId" />
                         </div>
                     </div>
 
                     <div class="row">
-                        <!-- Ticket Start Input -->
+                        <!-- Task Start Input -->
                         <div class="form-group col-md-6 col-sm-12">
                             <label asp-for="StartDate" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
@@ -86,7 +63,7 @@
                             </div>
                         </div>
 
-                        <!-- Ticket DueDate Input -->
+                        <!-- Task DueDate Input -->
                         <div class="form-group col-md-6 col-sm-12">
                             <label asp-for="DueDate" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
@@ -98,7 +75,7 @@
                     </div>
 
                     <div class="row">
-                        <!-- Ticket EstDuration Input -->
+                        <!-- Task EstDuration Input -->
                         <div class="form-group col-md-6 col-sm-12">
                             <label asp-for="EstDuration" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
@@ -108,7 +85,7 @@
                             </div>
                         </div>
 
-                        <!-- Ticket Status Select -->
+                        <!-- Task Status Select -->
                         <div class="form-group col-md-6 col-sm-12">
                             <label asp-for="Status" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
@@ -119,20 +96,10 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <!-- Ticket Attachments Input -->
-                        <div class="form-group col-md-12">
-                            <label for="files" class="col-md-3 col-form-label">Attachments</label>
-                            <div class="col-md-9">
-                                <input name="files" id="files" type="file" multiple class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-
                     <hr />
 
                     <div class="row">
-                        <!-- Ticket Description TextArea -->
+                        <!-- Task Description TextArea -->
                         <div class="form-group col-md-12">
                             <label asp-for="Description" class="col-md-3 col-form-label"></label>
                             <div class="col-md-9">
@@ -142,8 +109,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <hr />
 
                     <!-- Assignments -->
                     <div class="row">
@@ -175,55 +140,15 @@
                                 </div>
                             </div>
                         </div>
-                        
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <button type="submit" class="btn btn-sm btn-primary">
-                        <i class="fa fa-dot-circle-o"></i> Save
-                    </button>
-                    <button type="reset" class="btn btn-sm btn-danger">
-                        <i class="fa fa-ban"></i> Reset
-                    </button>
-                </div>
-            </div>
-        </form>
 
+                    </div>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-secondary" data-dismiss="modal">Close</a>
+                <a class="btn btn-primary" data-save="modal">Save</a>
+            </div>
+        </div>
     </div>
 </div>
-
-@section Scripts {
-
-    <script>
-        $(function () {
-            $("#TicketTypeId").change(function () {
-                $.ajax({
-                    type: "GET",
-                    url: '/TicketTypes/GetDefaultDuration',
-                    data: { ticketTypeId: $(this).val() },
-                    dataType: 'json',
-                    success: function (result) {
-                        $("#EstDuration").val(result);
-                        var $dueDate = $("#StartDate").val();
-                        var dt = new Date($dueDate);
-                        dt.setDate(dt.getDate() + result);
-                        var yyyy = dt.getFullYear();
-                        var mm = ((dt.getMonth() + 1) > 10) ? dt.getMonth() + 1 : ('0' + (dt.getMonth() + 1));
-                        var dd = (dt.getDate() > 10) ? dt.getDate() : ('0' + dt.getDate());
-                        $("#DueDate").val(yyyy + '-' + mm + '-' + dd);
-                    }
-                });
-
-            });
-            //var $defaultDuration =  = $("#DefaultDuration");
-
-        });
-    </script>
-
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-    <script src="~/js/the-repeater.js"></script>
-
-}
-
-
