--- a/AMS/Views/TodoTasks/Details.cshtml
+++ b/AMS/Views/TodoTasks/Details.cshtml
@@ -23,31 +23,28 @@
                             <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">
                                 Edit
                             </a>
-                            <a asp-controller="Assignments" asp-action="Index" asp-route-ticketId="@Model.Id" class="btn btn-secondary ml-1">
-                                Assignments
-                            </a>
                             @if (Model.CanBeCompleted)
                             {
-                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Completed" class="btn btn-sm btn-success ml-1">
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Completed" class="btn btn-success ml-1">
                                     <i class="fa fa-check"></i> Complete
                                 </a>
                             }
                             @if (Model.CanBeCancelled)
                             {
-                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Cancelled" class="btn btn-sm btn-danger ml-1">
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Cancelled" class="btn btn-danger ml-1">
                                     <i class="fa fa-close"></i> Cancel
                                 </a>
                             }
                             @if (Model.IsActive && !Model.IsPending)
                             {
-                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Pending" class="btn btn-sm btn-warning ml-1">
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Pending" class="btn btn-warning ml-1">
                                     <i class="fa fa-pause"></i> Pending
                                 </a>
                             }
 
                             @if (Model.IsPending)
                             {
-                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Open" class="btn btn-sm btn-primary ml-1">
+                                <a asp-action="ChangeState" asp-route-id="@Model.Id" asp-route-status="@WorkStatus.Open" class="btn btn-primary ml-1">
                                     <i class="fa fa-play"></i> Re-Open
                                 </a>
                             }
@@ -61,6 +58,15 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#assignments" role="tab" aria-controls="assignments">Assignments</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#ticket" role="tab" aria-controls="ticket">Ticket</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#attachments" role="tab" aria-controls="attachements">Attachments</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#assets" role="tab" aria-controls="assets">Assets</a>
                                 </li>
                             </ul>
 
@@ -127,6 +133,64 @@
                                 </div>
                                 <div class="tab-pane" id="assignments" role="tabpanel">
                                     <partial name="_Assignments" for="@Model.Assignments" />
+                                </div>
+                                <div class="tab-pane" id="ticket" role="tabpanel">
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.Summary)</strong></label>
+                                        <div class="col-10">@Model.Ticket.Summary (@Model.Ticket.Status.ToString())</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.Code)</strong></label>
+                                        <div class="col-10">@Model.Ticket.Code</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.TicketTypeId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="TicketTypes" asp-action="Details" asp-route-id="@Model.Ticket.TicketTypeId">@Model.Ticket.TicketType?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.ClientId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Clients" asp-action="Details" asp-route-id="@Model.Ticket.ClientId">@Model.Ticket.Client?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.LocationId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Locations" asp-action="Details" asp-route-id="@Model.Ticket.LocationId">@Model.Ticket.Location?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.DueDate)</strong></label>
+                                        <div class="col-10">@Model.Ticket.DueDate.ToString("dd-MMM-yyyy")</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.StartDate)</strong></label>
+                                        <div class="col-10">@Model.Ticket.StartDate.ToString("dd-MMM-yyyy")</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.EstDuration)</strong></label>
+                                        <div class="col-10">@Model.Ticket.EstDuration days</div>
+                                    </div>
+
+                                    @if (Model.Ticket.IsPending)
+                                    {
+                                        <div class="form-group row">
+                                            <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.PendingDate)</strong></label>
+                                            <div class="col-10">@Model.Ticket.PendingDate.Value.ToString("dd-MMM-yyyy")</div>
+                                        </div>
+                                    }
+                                    @if (Model.Ticket.CompletionDate.HasValue)
+                                    {
+                                        <div class="form-group row">
+                                            <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.CompletionDate)</strong></label>
+                                            <div class="col-10">@Model.Ticket.CompletionDate.Value.ToString("dd-MMM-yyyy")</div>
+                                        </div>
+                                    }
+                                    <hr />
+                                    <partial name="_Fields" for="@Model.Ticket" />
+                                </div>
+
+                                <div class="tab-pane" id="attachments" role="tabpanel">
+                                    <partial name="_Attachments" for="@Model.Ticket.Attachements" />
+                                </div>
+                                <div class="tab-pane" id="assets" role="tabpanel">
+                                    <partial name="_Assets" for="@Model.Ticket.RelatedAssets" />
                                 </div>
                             </div>
                         </div>
