--- a/AMS/Views/Shared/_app-header.cshtml
+++ b/AMS/Views/Shared/_app-header.cshtml
@@ -23,29 +23,34 @@
 
   @if (SignInManager.IsSignedIn(User))
   {
-    <ul class="nav navbar-nav ml-auto">
-      <li class="nav-item d-md-down-none">
-        <a class="nav-link" href="#">
-          <i class="icon-bell"></i>
-          <span class="badge badge-pill badge-danger">5</span>
-        </a>
-      </li>
-      <li class="nav-item d-md-down-none">
-        <a class="nav-link" href="#">
-          <i class="icon-list"></i>
-        </a>
-      </li>
-      <li class="nav-item d-md-down-none">
-        <a class="nav-link" href="#">
-          <i class="icon-location-pin"></i>
-        </a>
-      </li>
+<ul class="nav navbar-nav ml-auto">
 
-      <!-- USER-NAV -->
-      <partial name="_user-nav" />
-      <!-- /USER-NAV -->
+    <!-- NOTIFICATIONS -->
+    <partial name="_notifications" />
+    <!-- /NOTIFICATIONS -->
 
-    </ul>
+    @*<li class="nav-item d-md-down-none">
+          <a class="nav-link" href="#">
+            <i class="icon-bell"></i>
+            <span class="badge badge-pill badge-danger">5</span>
+          </a>
+        </li>*@
+    <li class="nav-item d-md-down-none">
+        <a class="nav-link" href="#">
+            <i class="icon-list"></i>
+        </a>
+    </li>
+    <li class="nav-item d-md-down-none">
+        <a class="nav-link" href="#">
+            <i class="icon-location-pin"></i>
+        </a>
+    </li>
+
+    <!-- USER-NAV -->
+    <partial name="_user-nav" />
+    <!-- /USER-NAV -->
+
+</ul>
 
     <button class="navbar-toggler aside-menu-toggler d-md-down-none" type="button" data-toggle="aside-menu-lg-show">
       <span class="navbar-toggler-icon"></span>
