Calendar add task

--- a/AMS/Views/Tickets/Details.cshtml
+++ b/AMS/Views/Tickets/Details.cshtml
@@ -144,7 +144,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-2"><strong>@Html.DisplayNameFor(m => m.EstDuration)</strong></label>
-                                        <div class="col-10">@Model.EstDuration days</div>
+                                        <div class="col-10">@Model.EstDuration day(s)</div>
                                     </div>
 
                                     @if (Model.IsPending)
