--- a/AMS/Views/TodoTasks/Details.cshtml
+++ b/AMS/Views/TodoTasks/Details.cshtml
@@ -103,7 +103,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-2"><strong>@Html.DisplayNameFor(m => m.EstDuration)</strong></label>
-                                        <div class="col-10">@Model.EstDuration days</div>
+                                        <div class="col-10">@Model.EstDuration day(s)</div>
                                     </div>
 
                                     @if (Model.IsPending)
@@ -165,7 +165,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Ticket.EstDuration)</strong></label>
-                                        <div class="col-10">@Model.Ticket.EstDuration days</div>
+                                        <div class="col-10">@Model.Ticket.EstDuration day(s)</div>
                                     </div>
 
                                     @if (Model.Ticket.IsPending)
