--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -46,8 +46,14 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-area="" asp-controller="My" asp-action="TodoTasks">
+                <a class="nav-link" asp-area="" asp-controller="My" asp-action="TodoTasksAll">
                     <i class="nav-icon fa fa-tasks"></i> My Tasks
+                    <span class="badge badge-primary"></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="My" asp-action="TodoTasks">
+                    <i class="nav-icon fa fa-tasks"></i> Task List
                     <span class="badge badge-primary"></span>
                 </a>
             </li>
