--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -66,7 +66,8 @@
 
 
 
-            @if (User.IsInRole("Admin"))
+            @if (User.IsInRole("Admin") 
+                || User.Claims.Any(x => x.Type == System.Security.Claims.ClaimTypes.Role && x.Value.Contains("$Admin")))
             {
 
                 <li class="nav-item">
